crates/formatter/tests/snapshots/snapshots__coder__migrations__000341_template_version_preset_default.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop index if exists idx_template_version_presets_default;
alter table template_version_presets drop column if exists is_default;
