crates/formatter/tests/snapshots/snapshots__coder__migrations__000343_delete_chats.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table if exists chat_messages;
drop table if exists chats;
